--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -12,13 +12,8 @@ Vagrant.configure(2) do |config|
     end
 
     test01.vm.provision "ansible_local" do |ansible|
-      ansible.playbook = "test.yml"
+      ansible.playbook = "install-oracle-java-8-centos-7.yml"
       ansible.galaxy_role_file = "roles.yml"
-      ansible.extra_vars = {
-        java_version: 8,
-        java_update: 66,
-        java_build: 17
-      }
     end
   end
 end
