--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -16,4 +16,18 @@ Vagrant.configure(2) do |config|
       ansible.galaxy_role_file = "roles.yml"
     end
   end
+
+  config.vm.define "test02" do |test02|
+    test02.vm.box = "jeqo/centos-7"
+
+    test02.vm.provider "virtualbox" do |vb|
+      vb.cpus = 1
+      vb.memory = "512"
+    end
+
+    test02.vm.provision "ansible_local" do |ansible|
+      ansible.playbook = "install-oracle-java-7-centos-7.yml"
+      ansible.galaxy_role_file = "roles.yml"
+    end
+  end
 end
