validate java installed

--- a/tasks/install-oracle-java-redhat.yml
+++ b/tasks/install-oracle-java-redhat.yml
@@ -50,6 +50,7 @@
 
 - name: install oracle java jdk
   yum: name={{ java_rpm }} state=present
+  when: java_file.stat.exists == false
 
 - name: set java home
   lineinfile:
