--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -5,6 +5,7 @@ Vagrant.configure(2) do |config|
 
   config.vm.define "test01" do |test01|
     test01.vm.box = "jeqo/centos-7"
+    test01.vm.box = "/home/jeqo/boxes/jeqo/centos-7/centos-7.box"
 
     test01.vm.provider "virtualbox" do |vb|
       vb.cpus = 1
