--- a/tasks/install-oracle-java-debian.yml
+++ b/tasks/install-oracle-java-debian.yml
@@ -18,13 +18,4 @@
 - set_fact:
     java_home: "/usr/lib/jvm/java-{{ java_version}}-oracle"
 
-- name: set java home
-  lineinfile:
-   dest: "{{ ansible_env.HOME }}/.profile"
-   regexp: "^{{ item.start }}"
-   line: "{{ item.start }}{{ item.end }}"
-   insertbefore: "export PATH"
-  with_items:
-   - { start: "JAVA_HOME=", end: "{{ java_home }}" }
-   - { start: "PATH=$JAVA_HOME/bin:", end: "$PATH" }
-   - { start: "export JAVA_HOME", end: "" }
+- include: set-java-home.yml
