--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -7,11 +7,6 @@ Vagrant.configure(2) do |config|
     test01.vm.box = "jeqo/centos-7"
     test01.vm.box = "/home/jeqo/boxes/jeqo/centos-7/centos-7.box"
 
-    test01.vm.provider "virtualbox" do |vb|
-      vb.cpus = 1
-      vb.memory = "512"
-    end
-
     test01.vm.provision "ansible_local" do |ansible|
       ansible.playbook = "install-oracle-java-8-centos-7.yml"
       ansible.galaxy_role_file = "roles.yml"
@@ -21,13 +16,26 @@ Vagrant.configure(2) do |config|
   config.vm.define "test02" do |test02|
     test02.vm.box = "jeqo/centos-7"
 
-    test02.vm.provider "virtualbox" do |vb|
-      vb.cpus = 1
-      vb.memory = "512"
-    end
-
     test02.vm.provision "ansible_local" do |ansible|
       ansible.playbook = "install-oracle-java-7-centos-7.yml"
+      ansible.galaxy_role_file = "roles.yml"
+    end
+  end
+
+  config.vm.define "test03" do |test02|
+    test02.vm.box = "jeqo/centos-7"
+
+    test02.vm.provision "ansible_local" do |ansible|
+      ansible.playbook = "install-azul-zulu-8-centos-7.yml"
+      ansible.galaxy_role_file = "roles.yml"
+    end
+  end
+
+  config.vm.define "test04" do |test02|
+    test02.vm.box = "jeqo/centos-7"
+
+    test02.vm.provision "ansible_local" do |ansible|
+      ansible.playbook = "install-azul-zulu-7-centos-7.yml"
       ansible.galaxy_role_file = "roles.yml"
     end
   end
