--- a/tasks/set-java-home.yml
+++ b/tasks/set-java-home.yml
@@ -1,8 +1,18 @@
 ---
 #
+---
+#
+- set_fact:
+    profile_file: {{ ansible_env.HOME }}/.profile
+  when: ansible_os_family == "Debian"
+
+- set_fact:
+    profile_file: {{ ansible_env.HOME }}/.bash_profile
+  when: ansible_os_family == "RedHat"
+
 - name: set java home
   lineinfile:
-   dest: "{{ ansible_env.HOME }}/.profile"
+   dest: "{{ profile_file }}"
    regexp: "^{{ item.start }}"
    line: "{{ item.start }}{{ item.end }}"
    insertbefore: "export PATH"
