--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -4,37 +4,36 @@
 Vagrant.configure(2) do |config|
 
   config.vm.define "test01" do |test01|
-    test01.vm.box = "jeqo/centos-7"
-    test01.vm.box = "/home/jeqo/boxes/jeqo/centos-7/centos-7.box"
+    test01.vm.box = "jeqo/centos7-ansible"
 
-    test01.vm.provision "ansible_local" do |ansible|
+    test01.vm.provision "ansible" do |ansible|
       ansible.playbook = "install-oracle-java-8-centos-7.yml"
       ansible.galaxy_role_file = "roles.yml"
     end
   end
 
   config.vm.define "test02" do |test02|
-    test02.vm.box = "jeqo/centos-7"
+    test02.vm.box = "jeqo/centos7-ansible"
 
-    test02.vm.provision "ansible_local" do |ansible|
+    test02.vm.provision "ansible" do |ansible|
       ansible.playbook = "install-oracle-java-7-centos-7.yml"
       ansible.galaxy_role_file = "roles.yml"
     end
   end
 
   config.vm.define "test03" do |test02|
-    test02.vm.box = "jeqo/centos-7"
+    test02.vm.box = "jeqo/centos7-ansible"
 
-    test02.vm.provision "ansible_local" do |ansible|
+    test02.vm.provision "ansible" do |ansible|
       ansible.playbook = "install-azul-zulu-8-centos-7.yml"
       ansible.galaxy_role_file = "roles.yml"
     end
   end
 
   config.vm.define "test04" do |test02|
-    test02.vm.box = "jeqo/centos-7"
+    test02.vm.box = "jeqo/centos7-ansible"
 
-    test02.vm.provision "ansible_local" do |ansible|
+    test02.vm.provision "ansible" do |ansible|
       ansible.playbook = "install-azul-zulu-7-centos-7.yml"
       ansible.galaxy_role_file = "roles.yml"
     end
