--- a/tasks/install-azul-zulu-debian.yml
+++ b/tasks/install-azul-zulu-debian.yml
@@ -10,6 +10,6 @@
   apt: name=zulu-{{ java_version }}
 
 - set_fact:
-    java_home: "/usr/java/zulu-{{ java_version }}"
+    java_home: "/usr/lib/jvm/zulu-{{ java_version }}"
 
 - include: set-java-home.yml
