add openjdk and jre

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
 # defaults file for java
-java_provider: azul #oracle azul (TODO: include openjdk)
-java_version: 8 # Supported versions: 7 and 8
+java_provider: azul #oracle azul openjdk
+java_version: 8 # 7 8
+java_type: jdk # jdk jre
