--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,11 @@
 - debug:
     var: java_provider
 
+- include: install-openjdk.yml
+  become: true
+  become_user: root
+  when: java_provider == "openjdk"
+
 - include: install-oracle-java.yml
   become: true
   become_user: root
