fix openjdk java_home

--- a/tasks/install-openjdk.yml
+++ b/tasks/install-openjdk.yml
@@ -27,4 +27,4 @@
   when: ansible_os_family == "RedHat"
 
 - set_fact:
-    java_home: "/usr/lib/jvm/{{ java_home_prefix }}-1.{{ java_version }}.0-openjdk-amd64"
+    java_home: "/usr/lib/jvm/{{ java_home_prefix }}-1.{{ java_version }}.0"
