--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -9,42 +9,42 @@ Vagrant.configure(2) do |config|
   end
 
   config.vm.define "test01" do |test01|
-    test01.vm.box = "jeqo/centos7-ansible"
+    test01.vm.box = "jeqo/ansible-centos7"
   end
 
   config.vm.define "test02" do |test02|
-    test02.vm.box = "jeqo/centos7-ansible"
+    test02.vm.box = "jeqo/ansible-centos7"
   end
 
   config.vm.define "test03" do |test03|
-    test03.vm.box = "jeqo/centos7-ansible"
+    test03.vm.box = "jeqo/ansible-centos7"
   end
 
   config.vm.define "test04" do |test04|
-    test04.vm.box = "jeqo/centos7-ansible"
+    test04.vm.box = "jeqo/ansible-centos7"
   end
 
   config.vm.define "test05" do |test05|
-    test05.vm.box = "jeqo/centos7-ansible"
+    test05.vm.box = "jeqo/ansible-centos7"
   end
 
   config.vm.define "test06" do |test06|
-    test06.vm.box = "jeqo/centos7-ansible"
+    test06.vm.box = "jeqo/ansible-centos7"
   end
 
   config.vm.define "test07" do |test07|
-    test07.vm.box = "jeqo/centos7-ansible"
+    test07.vm.box = "jeqo/ansible-centos7"
   end
 
   config.vm.define "test08" do |test08|
-    test08.vm.box = "jeqo/centos7-ansible"
+    test08.vm.box = "jeqo/ansible-centos7"
   end
 
   config.vm.define "test09" do |test09|
-    test09.vm.box = "jeqo/centos7-ansible"
+    test09.vm.box = "jeqo/ansible-centos7"
   end
 
   config.vm.define "test10" do |test10|
-    test10.vm.box = "jeqo/centos7-ansible"
+    test10.vm.box = "jeqo/ansible-centos7"
   end
 end
