--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -4,7 +4,7 @@
 Vagrant.configure(2) do |config|
 
   config.vm.provision "ansible" do |ansible|
-    ansible.playbook = "main.yml"
+    ansible.playbook = "test.yml"
     ansible.galaxy_role_file = "roles.yml"
   end
 
