--- a/tasks/install-oracle-java-debian.yml
+++ b/tasks/install-oracle-java-debian.yml
@@ -6,11 +6,8 @@
 - name: install apt java repository
   apt_repository: repo='ppa:webupd8team/java'
 
-- name: enable silent install
-  command: "{{ item }}"
-  with_items:
-    - "echo debconf shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections"
-    - "echo debconf shared/accepted-oracle-license-v1-1 seen true | sudo debconf-set-selections"
+- debconf: name=shared question='shared/accepted-oracle-license-v1-1' value=true vtype='select'
+- debconf: name=shared question='shared/accepted-oracle-license-v1-1' value=true vtype='seen'
 
 - name: install oracle java jdk
   apt: name=oracle-java{{ java_version }}-installer update_cache=yes
