--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -47,4 +47,8 @@ Vagrant.configure(2) do |config|
   config.vm.define "test10" do |test10|
     test10.vm.box = "jeqo/ansible-centos7"
   end
+
+  config.vm.define "test11" do |test10|
+    test10.vm.box = "jeqo/ansible-ubuntu14"
+  end
 end
