--- a/tasks/install-azul-zulu-debian.yml
+++ b/tasks/install-azul-zulu-debian.yml
@@ -10,4 +10,4 @@
   apt: name=zulu-{{ java_version }}
 
 - set_fact:
-    java_home: "/usr/lib/jvm/zulu-{{ java_version }}"
+    java_home: "/usr/lib/jvm/zulu-{{ java_version }}-amd64"
