--- a/tasks/set-java-home.yml
+++ b/tasks/set-java-home.yml
@@ -1,5 +1,7 @@
 ---
 #
+- debug: msg="JAVA_HOME={{ java_home }}"
+
 - set_fact:
     profile_file: "{{ ansible_env.HOME }}/.profile"
   when: ansible_os_family == "Debian"
