force zulu install

--- a/tasks/install-azul-zulu-debian.yml
+++ b/tasks/install-azul-zulu-debian.yml
@@ -4,10 +4,14 @@
   apt_key: keyserver=keyserver.ubuntu.com id=0x219BD9C9
 
 - name: import zulu repo
-  apt_repository: repo='deb http://repos.azulsystems.com/ubuntu stable main' state=present
+  apt_repository:
+    repo: 'deb http://repos.azulsystems.com/ubuntu stable main'
+    state: present
 
 - name: install zulu
-  apt: name=zulu-{{ java_version }}
+  apt:
+    name: zulu-{{ java_version }}
+    force: yes
 
 - set_fact:
     java_home: "/usr/lib/jvm/zulu-{{ java_version }}-amd64"
