--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -8,47 +8,51 @@ Vagrant.configure(2) do |config|
     ansible.galaxy_role_file = "roles.yml"
   end
 
-  config.vm.define "test01" do |test01|
-    test01.vm.box = "jeqo/ansible-centos7"
+  config.vm.define "test01" do |node|
+    node.vm.box = "jeqo/ansible-centos7"
   end
 
-  config.vm.define "test02" do |test02|
-    test02.vm.box = "jeqo/ansible-centos7"
+  config.vm.define "test02" do |node|
+    node.vm.box = "jeqo/ansible-centos7"
   end
 
-  config.vm.define "test03" do |test03|
-    test03.vm.box = "jeqo/ansible-centos7"
+  config.vm.define "test03" do |node|
+    node.vm.box = "jeqo/ansible-centos7"
   end
 
-  config.vm.define "test04" do |test04|
-    test04.vm.box = "jeqo/ansible-centos7"
+  config.vm.define "test04" do |node|
+    node.vm.box = "jeqo/ansible-centos7"
   end
 
-  config.vm.define "test05" do |test05|
-    test05.vm.box = "jeqo/ansible-centos7"
+  config.vm.define "test05" do |node|
+    node.vm.box = "jeqo/ansible-centos7"
   end
 
-  config.vm.define "test06" do |test06|
-    test06.vm.box = "jeqo/ansible-centos7"
+  config.vm.define "test06" do |node|
+    node.vm.box = "jeqo/ansible-centos7"
   end
 
-  config.vm.define "test07" do |test07|
-    test07.vm.box = "jeqo/ansible-centos7"
+  config.vm.define "test07" do |node|
+    node.vm.box = "jeqo/ansible-centos7"
   end
 
-  config.vm.define "test08" do |test08|
-    test08.vm.box = "jeqo/ansible-centos7"
+  config.vm.define "test08" do |node|
+    node.vm.box = "jeqo/ansible-centos7"
   end
 
-  config.vm.define "test09" do |test09|
-    test09.vm.box = "jeqo/ansible-centos7"
+  config.vm.define "test09" do |node|
+    node.vm.box = "jeqo/ansible-centos7"
   end
 
-  config.vm.define "test10" do |test10|
-    test10.vm.box = "jeqo/ansible-centos7"
+  config.vm.define "test10" do |node|
+    node.vm.box = "jeqo/ansible-centos7"
   end
 
-  config.vm.define "test11" do |test11|
-    test11.vm.box = "jeqo/ansible-ubuntu14"
+  config.vm.define "test11" do |node|
+    node.vm.box = "jeqo/ansible-ubuntu14"
+  end
+
+  config.vm.define "test12" do |node|
+    node.vm.box = "jeqo/ansible-ubuntu14"
   end
 end
