--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,7 +2,7 @@
 # vars file for java
 # download.oracle.com/otn/java/jdk/8u66-b17/jdk-8u66-linux-x64.rpm
 java_oracle_8_update: 74
-java_oracle_8_build: 02
+java_oracle_8_build: "02"
 
 # download.oracle.com/otn/java/jdk/7u80-b15/jdk-7u80-linux-x64.rpm
 java_oracle_7_update: 80
